--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <link href="index.css"rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
 </head>
     <body>
       <section>
       <nav>
-        <link href="About Us.html">
       </nav>
       </section>
     <nav>
@@ -35,12 +37,15 @@
   We believe in blowing away that bluey feeling of negativity and placing a smile on people's face With a much better
   better positive attitude towards change, even to yourself when you feel that you need some upifting in your head.</h3>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/pPrEHa5K4AI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pPrEHa5K4AI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br>
 <footer>
-  <p> Founder:Sepiso Limpo Nalumino</p>
-  <p><a href="sepiso:naluminojasmine@gmail.com> naluminojasmine </a></p>
+  <p> Build-a-mind is a privately owned application that is constantly reviewed and may have challenges from
+  time to time to improve the features of this application and give people a better experience with every
+new development.</p>
+<p> All Rights Reserved. </p>
+<p>Build-a-mind is powered by Team Build-a-mind </p>
+  <img  class="logo" src="brand logo.png">
 </footer>
-
 
       </body>
       </html>
